--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
     "@reduxjs/toolkit": "2.2.6",
     "@tremor/react": "3.17.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "9.1.2"
+    "react-redux": "9.1.2",
+    "sonner": "1.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
